--- a/html/14_dom.html
+++ b/html/14_dom.html
@@ -67,9 +67,7 @@
 
 <p><a class="p_ident" id="p-TpGsKP/H5i" href="#p-TpGsKP/H5i" tabindex="-1" role="presentation"></a>Las hojas son nodos de texto, y las flechas indican las relaciones padre-hijo entre nodos.</p>
 
-<p><a class="p_ident" id="p-T37m32jymR" href="#p-T37m32jymR" tabindex="-1" role="presentation"></a>{{id estándar}}</p>
-
-<h2><a class="h_ident" id="h-CFjVAEqJy7" href="#h-CFjVAEqJy7" tabindex="-1" role="presentation"></a>El estándar</h2>
+<h2 id="estándar"><a class="h_ident" id="h-CFjVAEqJy7" href="#h-CFjVAEqJy7" tabindex="-1" role="presentation"></a>El estándar</h2>
 
 <p><a class="p_ident" id="p-Thr12eQdGQ" href="#p-Thr12eQdGQ" tabindex="-1" role="presentation"></a>{{index “lenguaje de programación”, [interfaz, diseño], [DOM, interfaz]}}</p>
 
