--- a/html/index.html
+++ b/html/index.html
@@ -77,7 +77,7 @@
   <div id=cover>
 
     <p style="margin: 1em 0">
-      <a href="https://nostarch.com/ejs3">
+      <a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.pdf">
         <img src="img/cover.jpg" alt="Cover image"
           style="border: 1px solid black; max-width: 100%; box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.4)">
       </a>
@@ -152,29 +152,28 @@
 
     </ol>
 
-  </div>
+    <div id=links>
+      <h2>Enlaces y descargas</h2>
 
-  <div id=links>
+      <ul class="links">
+        <li><a href="code">Editor de Código y soluciones de ejercicios</a></li>
+        <li><a href="errata.html">Erratas para el libro impreso</a></li>
+        <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.pdf">Descargar PDF del libro</a> (&amp; <a
+            href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book_mobile.pdf">Descargar versión pequeña para
+            móviles</a>)</li>
+        <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.epub">Este libro como archivo EPUB</a>
+        </li>
+        <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.mobi">Este libro como archivo MOBI
+            (Kindle)</a>
+        </li>
+        <li><a href="https://eloquentjavascript.net/1st_edition">La primera edición del libro</a></li>
+        <li><a href="https://eloquentjavascript.net/2nd_edition">La segunda edición del libro</a></li>
+        <li><a href="https://eloquentjavascript.net/3rd_edition">La tercera edición del libro</a></li>
+      </ul>
 
-    <p>Una versión en papel (en inglés) de Eloquent JavaScript, incluyendo un capítulo
-      adicional, es publicada por <a href="http://www.nostarch.com/ejs3">No Starch Press</a>.</p>
-
-    <h2>Otrás páginas</h2>
-
-    <ul class="links">
-      <li><a href="code">Editor de Código y soluciones de ejercicios</a></li>
-      <li><a href="errata.html">Erratas para el libro impreso</a></li>
-      <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.pdf">Descargar PDF del libro</a> (&amp; <a
-          href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book_mobile.pdf">Descargar versión pequeña para
-          móviles</a>)</li>
-      <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.epub">Este libro como archivo EPUB</a></li>
-      <li><a href="https://pub-97d2f14809854ff1870055724c829992.r2.dev/book.mobi">Este libro como archivo MOBI
-          (Kindle)</a>
-      </li>
-      <li><a href="https://eloquentjavascript.net/1st_edition">La primera edición del libro</a></li>
-      <li><a href="https://eloquentjavascript.net/2nd_edition">La segunda edición del libro</a></li>
-      <li><a href="https://eloquentjavascript.net/3rd_edition">La tercera edición del libro</a></li>
-    </ul>
+      <p>Una versión en papel (en inglés) de Eloquent JavaScript, incluyendo un capítulo
+        adicional, es publicada por <a href="http://www.nostarch.com/ejs3">No Starch Press</a>.</p>
+    </div>
 
   </div>
 </article>
